CI: Added accept EULA from command line

--- a/.github/workflows/linux_ROS1.yaml
+++ b/.github/workflows/linux_ROS1.yaml
@@ -35,6 +35,9 @@ jobs:
         curl -sSL https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
         sudo apt-add-repository https://packages.microsoft.com/ubuntu/18.04/prod
         sudo apt-get update
+        ARG DEBIAN_FRONTEND=noninteractive
+        echo 'libk4a1.4 libk4a1.4/accepted-eula-hash string 0f5d5c5de396e4fee4c0753a21fee0c1ed726cf0316204edda484f08cb266d76' | sudo debconf-set-selections
+        echo 'libk4a1.4 libk4a1.4/accept-eula boolean true' | sudo debconf-set-selections
         sudo apt-get install libk4a1.4
         sudo apt-get install libk4a1.4-dev
         sudo apt-get install k4a-tools
