--- a/.github/workflows/linux_ROS2.yaml
+++ b/.github/workflows/linux_ROS2.yaml
@@ -30,14 +30,18 @@ jobs:
         sudo apt install ros-foxy-desktop
       env:
         ROSDISTRO: ${{ matrix.ROSDISTRO }}
-    - name: Install Azure Kinect Sensor SDK
+    - name: Configure Microsoft's Package Repository
       shell: bash
+      continue-on-error: true 
       run: |
         curl -sSL https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
         sudo apt-add-repository https://packages.microsoft.com/ubuntu/18.04/prod
         curl -sSL https://packages.microsoft.com/config/ubuntu/18.04/prod.list | sudo tee /etc/apt/sources.list.d/microsoft-prod.list
         curl -sSL https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
         sudo apt-get update
+    - name: Install Azure Kinect Sensor SDK
+      shell: bash
+      run: |
         export DEBIAN_FRONTEND=noninteractive
         echo 'libk4a1.3 libk4a1.3/accepted-eula-hash string 0f5d5c5de396e4fee4c0753a21fee0c1ed726cf0316204edda484f08cb266d76' | sudo debconf-set-selections
         echo 'libk4a1.3 libk4a1.3/accept-eula boolean true' | sudo debconf-set-selections
