--- a/package.xml
+++ b/package.xml
@@ -17,13 +17,13 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>visualization_msgs</depend>
   <depend>image_transport</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>angles</depend>
-  <depend>xacro</depend>
   <depend>cv_bridge</depend>
 
   <export>
