--- a/package.xml
+++ b/package.xml
@@ -25,6 +25,7 @@
   <depend>geometry_msgs</depend>
   <depend>angles</depend>
   <depend>cv_bridge</depend>
+  <depend>K4A</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
