--- a/package.xml
+++ b/package.xml
@@ -31,6 +31,7 @@
   <depend>K4A</depend>
 
   <exec_depend>rgbd_launch</exec_depend>
+  <depend>OpenCV</depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
