Changes for making it compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,11 +107,9 @@ target_link_libraries(${PROJECT_NAME}_node
 
 ## Mark executables and/or libraries for installation
 install(TARGETS ${PROJECT_NAME}_node
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin
   DESTINATION lib/${PROJECT_NAME}
 )
+message("Added libs")
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 install(
