--- a/package.xml
+++ b/package.xml
@@ -28,10 +28,9 @@
   <depend>nodelet</depend>
   <depend>xacro</depend>
   <depend>cv_bridge</depend>
-  <depend>K4A</depend>
+  <depend>libopencv-dev</depend>
 
   <exec_depend>rgbd_launch</exec_depend>
-  <depend>OpenCV</depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
