--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,10 +48,14 @@ add_executable(${PROJECT_NAME}_node
   )
 
 add_library(${PROJECT_NAME}_library SHARED 
+  src/k4a_ros_bridge_node.cpp
   src/k4a_ros_device.cpp
+  src/k4a_ros_device_params.cpp
+  src/k4a_calibration_transform_data.cpp
   )
 
-ament_target_dependencies(${PROJECT_NAME}_node rclcpp 
+ament_target_dependencies(${PROJECT_NAME}_node
+  rclcpp 
   std_msgs 
   sensor_msgs
   visualization_msgs
@@ -65,6 +69,7 @@ ament_target_dependencies(${PROJECT_NAME}_node rclcpp
   )
 
 ament_target_dependencies(${PROJECT_NAME}_library
+  rclcpp
   std_msgs 
   sensor_msgs
   visualization_msgs
@@ -125,6 +130,10 @@ target_link_libraries(${PROJECT_NAME}_node
   ${K4A_LIBS}
 )
 
+target_link_libraries(${PROJECT_NAME}_library
+  ${K4A_LIBS}
+)
+
 rclcpp_components_register_nodes(${PROJECT_NAME}_library "K4AROSDevice")
 
 #############
@@ -136,6 +145,13 @@ rclcpp_components_register_nodes(${PROJECT_NAME}_library "K4AROSDevice")
 
 ## Mark executables and/or libraries for installation
 install(TARGETS ${PROJECT_NAME}_node
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(TARGETS ${PROJECT_NAME}_library
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
